# mcp-memory-server

./: .codecov.yml  .coveragerc  .dockerignore  .env.example  .gitignore  .markdown-link-check.json  .markdownlint.json  .pre-commit-config.yaml  AUDIT_REPORT.md  Dockerfile  MONITORING_TESTING.md  MONITORING_VALIDATION.md  README.md  TESTING_GUIDE.md  TESTING_PHASE2_COMPLETE.md  TESTING_PHASE2_SUMMARY.md  VALIDATION_REPORT.md  alembic.ini  config.yaml  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.yml  package.json  probe_tool.py  pyproject.toml  requirements.txt  run_tests.sh  run_validation_suite.sh  test_e2e_validation.py  test_integration_flow.py  test_models_validation.py  validate-fixes.sh  validate_test_env.sh
.github/: dependabot.yml
.github/workflows/: ci-cd.yml  ci.yml  monitoring-ci.yml  nightly-build.yml  pr-validation.yml  validate-docs.yml
config/: alembic.ini  pytest.ini
config/requirements/: requirements-dev.txt  requirements.txt
deploy/: Dockerfile  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.yml
deploy/monitoring/: README.md  alertmanager.yml  prometheus.yml
docs/: COMPLETE_PROJECT_SUMMARY.md  PHASES_5.1-5.4_COMPLETE_SUMMARY.md  VALIDATION_CHECKLIST.md  package.json
migrations/: env.py
monitoring/: README.md  prometheus.yml
scripts/: .markdownlint.json  check_backup_health.sh  cleanup_monitoring.sh  continuous_load_test.sh  docker-commands.sh  docker-entrypoint.sh  dr_drill_practice.sh  final_audit.sh  health_check.py  install_cron_jobs.sh  install_doc_tools.sh  lint_docs.sh  monitor_load_test.py  recover_database_corruption.sh  recover_ransomware.sh  restore_application.sh  restore_grafana.sh  restore_prometheus.sh  run_all_tests.sh  run_ci_locally.sh  run_ci_tests.sh  run_dr_tests.sh  run_e2e_tests.sh  run_integration_tests.sh  run_load_tests.sh  run_monitoring_tests.sh  run_system_metrics_tests.sh  simulate_dr_drill.sh  start_monitoring.sh  stop_monitoring.sh  test_backup_restore.sh  validate_cicd.sh  validate_documentation.py  validate_documentation.sh  validate_dr_drill.sh  validate_system_metrics.sh  verify_all_phases.sh  verify_recovery.sh
src/: __init__.py  health_check.py  server.py
tests/: conftest.py  test_journal_flow.py
(+182 files in other folders)
